--- a/Panaderia-Heiland/css/estilos.css
+++ b/Panaderia-Heiland/css/estilos.css
@@ -1,9 +1,9 @@
-
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
+
 /* index */
 .header {
     height: 60px;
@@ -12,8 +12,9 @@
     justify-content: center;
     padding-top: 1rem;
     box-shadow: 0 2px 5px rgba(245, 222, 179, 0.267);
-    
+
 }
+
 .nav--toggle {
     display: none;
 }
@@ -25,6 +26,7 @@
 
 
 }
+
 .nav__lista {
     width: 100%;
     display: flex;
@@ -48,7 +50,6 @@ a {
     text-align: center;
     -webkit-text-stroke: 1px rgb(0, 0, 0);
     text-shadow: 3px 3px 3px rgba(255, 255, 255, 0.925)
-    
 }
 
 
@@ -62,8 +63,8 @@ a {
     font-family: 'Dela Gothic One', cursive;
     text-align: center;
     letter-spacing: 2px;
-    
-} 
+
+}
 
 .subtitulo {
     color: rgb(167, 24, 14);
@@ -79,21 +80,20 @@ a {
 
 }
 
-body{
-    background-image: url(../images/fondofactura.jpg) ;
+body {
+    background-image: url(../images/fondofactura.jpg);
     background-size: cover;
     color: rgb(19, 18, 18);
     font-style: initial;
 }
 
-        
+
 .grid__main {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: 45% 45% ;
     column-gap: 4rem;
     padding-bottom: 2rem;
-    grid-template-areas: 
+    grid-template-areas:
         "ele1 ele2";
 
 
@@ -126,13 +126,13 @@ p {
 
 .parrafo {
     background-color: rgba(211, 186, 169, 0.123);
-    text-shadow: 1px 1px 1px white ;
+    text-shadow: 1px 1px 1px white;
     font-family: 'Beau Rivage', cursive;
     font-size: 42px;
     letter-spacing: 2px;
     line-height: 70px;
 
-    
+
 }
 
 .foot__back {
@@ -144,7 +144,7 @@ p {
 .footer {
     height: 80px;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -168,24 +168,24 @@ p {
 
 }
 
- /* contacto */
+/* contacto */
 
 .grid__contacto {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     /* grid-auto-rows: 50% 50%; */
-    grid-template-areas: 
+    grid-template-areas:
         "ele1 ele2"
-        "ele3 ele2"; 
+        "ele3 ele2";
     color: rgb(10, 10, 10);
     font-size: 25px;
-    
-    
+
+
 }
 
 .contact__list {
     color: red;
-    text-shadow:black;
+    text-shadow: black;
     padding-top: 1rem;
     padding-left: 1rem;
     grid-area: ele1;
@@ -195,8 +195,9 @@ p {
     padding-right: 1rem;
     padding-top: 3rem;
     grid-area: ele2;
- 
+
 }
+
 .contact__item-1 {
     padding-left: 2rem;
     color: red;
@@ -216,7 +217,7 @@ p {
 }
 
 iframe {
-    width: 100% !important; 
+    width: 100% !important;
 
 }
 
@@ -225,28 +226,28 @@ iframe {
 }
 
 /* nosotros */
-.grid__nosotros{
+.grid__nosotros {
     height: calc(100vh -140px);
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: 25% 25% 25% 25%;
     column-gap: 4rem;
-    row-gap: rem;
-    grid-template-areas: 
-    "ele1 ele1 ele3 ele3"
-    "ele1 ele1 ele3 ele3"
-    "ele2 ele2 ele3 ele3"
-    "ele2 ele2 ele3 ele3";
-   
+    grid-template-areas:
+        "ele1 ele3"
+        "ele1 ele3"
+        "ele2 ele3"
+        "ele2 ele3";
+
 
 }
 
 .nosotros__1 {
     justify-content: left;
-    padding-top: 2rem ;
+    padding-top: 2rem;
     grid-area: ele1;
 
 }
+
 .nosotros__2 {
     /* width: auto; */
     /* height: 500px; */
@@ -254,6 +255,7 @@ iframe {
     grid-area: ele2;
 
 }
+
 .nosotros__3 {
     padding-top: 2rem;
     padding-right: 1rem;
@@ -266,6 +268,7 @@ iframe {
     height: 90%;
     object-fit: cover;
 }
+
 .nosotros-parrafo {
     padding-left: 2rem;
     font-size: 20px;
@@ -279,19 +282,19 @@ iframe {
 
 
 
-    /* galeria de imagenes P y P*/
+/* galeria de imagenes P y P*/
 
-.fondo-1{
-    background-color:rgba(0, 0, 0, 0.596);
-}   
+.fondo-1 {
+    background-color: rgba(0, 0, 0, 0.596);
+}
 
 .galeria__panificados {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 140px;
-    grid-template-areas: 
+    grid-template-areas:
         "ele1 ele2 ele3"
-        "ele1 ele2 ele3"  
+        "ele1 ele2 ele3"
         "ele4 ele4 ele5"
         "ele4 ele4 ele5"
         "ele6 ele6 ele5"
@@ -299,7 +302,7 @@ iframe {
     padding: 1rem;
     column-gap: 1rem;
     row-gap: 2rem;
-    
+
 }
 
 .grid__titulo {
@@ -322,7 +325,7 @@ iframe {
     position: absolute;
     position: center;
     letter-spacing: 4px;
-    
+
 }
 
 .galeria__img {
@@ -365,7 +368,7 @@ iframe {
 
 }
 
-   
+
 
 /* pasteleria */
 
@@ -373,9 +376,9 @@ iframe {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 120px;
-    grid-template-areas: 
+    grid-template-areas:
         "ele1 ele2 ele3"
-        "ele1 ele2 ele3"  
+        "ele1 ele2 ele3"
         "ele4 ele4 ele5"
         "ele4 ele4 ele5"
         "ele6 ele6 ele5"
@@ -405,41 +408,49 @@ iframe {
     background: rgba(238, 49, 49, 0.507);
 
 }
-    
+
 
 .galeria__item--1 {
     grid-area: ele1;
-    
+
 
 }
+
 .galeria__item--2 {
     grid-area: ele2;
 
 }
+
 .galeria__item--3 {
     grid-area: ele3;
 
 }
+
 .galeria__item--4 {
     grid-area: ele4;
 
 }
+
 .galeria__item--5 {
     grid-area: ele5;
 
 }
+
 .galeria__item--6 {
     grid-area: ele6;
 
 }
+
 .galeria__item--7 {
     grid-area: ele7;
 
 }
+
 .galeria__item--8 {
     grid-area: ele8;
 
 }
+
 .galeria__item--9 {
     grid-area: ele9;
 
@@ -447,19 +458,19 @@ iframe {
 
 
 
-@media screen and (max-width: 400px) {
-    
+@media screen and (max-width: 425px) {
+
     body {
         background-image: none;
         background-color: rgba(31, 105, 89, 0.795);
     }
-    
+
     .header {
         justify-content: flex-end;
         box-shadow: 0 2px 5px rgba(245, 222, 179, 0.267);
-    
+
     }
-    
+
     .nav--toggle {
         color: #2915dfd0;
         background: none;
@@ -467,10 +478,12 @@ iframe {
         font-size: 30px;
         display: inline-block;
     }
+
     .nav {
         display: none;
 
     }
+
     .subtitulo {
         text-align: left;
         font-size: 25px;
@@ -479,10 +492,12 @@ iframe {
         padding-bottom: 2rem;
 
     }
+
     .titulo {
 
         letter-spacing: 4.5px;
     }
+
     .parrafo {
         font-family: Arial, Helvetica, sans-serif;
         /* border: 3px solid black ; */
@@ -494,8 +509,8 @@ iframe {
         line-height: 1.3rem;
         letter-spacing: 1.4px;
         color: rgb(5, 5, 5);
-        
-        
+
+
     }
 
     .fondo-1 {
@@ -504,15 +519,15 @@ iframe {
         background-color: rgba(0, 0, 0, 0.438);
 
     }
-   
+
 
     .grid__main {
-        grid-template-columns: 1fr;
-        row-gap: 2rem;       
-        grid-template-areas: 
+        grid-template-columns: (1fr);
+        row-gap: 2rem;
+        grid-template-areas:
             "ele1"
             "ele2";
-       
+
     }
 
     .main__1 {
@@ -522,7 +537,7 @@ iframe {
         width: 100%;
         max-width: 400px;
         height: 600px;
-        
+
     }
 
     .main__2 {
@@ -532,26 +547,23 @@ iframe {
         width: 100%;
         max-width: 400px;
         height: 400px;
-        
+
 
     }
 
     .footer {
         width: 100%;
-        max-width: 400px;
+        max-width: 425px;
 
-        
+
     }
 
     .galeria__panificados {
-        grid-template-columns: 1fr; 
+        grid-template-columns: (1fr);
         grid-auto-rows: 390px;
-        padding: 3rem;
-        row-gap: 3rem;
-        align-self: center;
         grid-template-areas:
             "ele1"
-            "ele2"  
+            "ele2"
             "ele3"
             "ele4"
             "ele5"
@@ -561,18 +573,18 @@ iframe {
 
     .titulo {
         font-size: 40px;
-    
+
     }
 
     .galeria__pasteleria {
-        grid-template-columns: 1fr; 
+        grid-template-columns: (1fr);
         grid-auto-rows: 340px;
         padding: 3rem;
         row-gap: 3rem;
         align-self: center;
-        grid-template-areas: 
+        grid-template-areas:
             "ele1"
-            "ele2"  
+            "ele2"
             "ele3"
             "ele4"
             "ele5"
@@ -583,58 +595,60 @@ iframe {
     }
 
     /* nosotros */
-    .grid__nosotros{
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-auto-rows: 200px;
-    row-gap: 3rem;
-    grid-template-areas: 
-        "ele1"
-        "ele2"
-        "ele3";
-   
+    .grid__nosotros {
+        display: grid;
+        grid-template-columns: (1fr);
+        grid-template-areas:
+            "ele1"
+            "ele2"
+            "ele3";
 
-}
-.nosotros__1 {
-    justify-content: left;
-    padding-top: 2rem ;
-    
 
-}
-.nosotros__2 {
-    /* width: auto; */
-    /* height: 500px; */
-    padding-top: 1rem;
-    
+    }
 
-}
-.nosotros__3 {
-    padding-top: 2rem;
-    padding-right: 1rem;
-    
+    .nosotros__1 {
+        justify-content: left;
+        padding-top: 2rem;
 
-}
 
-.nosotros__img {
-    width: 100%;
-    max-width: 400px;
-    height: 90%;
-    padding-left: 1rem;
-}
-.nosotros-parrafo {
-    padding-left: 2rem;
-    font-size: 20px;
-    font-family: 'Beau Rivage', cursive;
-    font-size: 30px;
-    letter-spacing: 2px;
-    line-height: 30px;
-}
+    }
+
+    .nosotros__2 {
+        /* width: auto; */
+        /* height: 500px; */
+        padding-top: 1rem;
+
+
+    }
+
+    .nosotros__3 {
+        padding-top: 2rem;
+        padding-right: 1rem;
+
+
+    }
+
+    .nosotros__img {
+        width: 100%;
+        max-width: 400px;
+        height: 90%;
+        padding-left: 1rem;
+    }
+
+    .nosotros-parrafo {
+        padding-left: 2rem;
+        font-size: 20px;
+        font-family: 'Beau Rivage', cursive;
+        font-size: 30px;
+        letter-spacing: 2px;
+        line-height: 30px;
+    }
 
     /* CONTACTO  */
     .grid__contacto {
         width: 100%;
         max-width: 400px;
-        grid-template-columns: 1fr; 
+        grid-template-columns: (1fr);
         row-gap: 2rem;
         grid-auto-rows: 500px;
         grid-template-rows: 20% 40% 40%;
@@ -645,29 +659,95 @@ iframe {
 
 
     }
-    .contact__list {
-        
-    
-    }
 
-    .contact__gps{
-        padding-left: 1.5rem;
-        
-        
-    }
+
     iframe {
         width: 85% !important;
         height: 70% !important;
 
     }
-    
-    
+
+
 }
 
-@media screen and (max-width: 900px) {
-    .fondo-1 {
-        background: none;
+@media screen and (max-width: 600px) {
+    .galeria__titulo {
+        font-size: 18px;
+        max-width: 100%;
+        letter-spacing: 1px;
+
+    }
+
+    a {
+        font-size: 20px;
+        font-weight: 400;
+        -webkit-text-stroke: 1px rgb(0, 0, 0);
+        text-shadow: 3px 3px 3px rgba(255, 255, 255, 0.925);
+
     }
 }
 
+@media screen and (max-width: 768px) {
+    .galeria__titulo {
+        font-size: 22px;
+        max-width: 100%;
 
+    }
+
+    .grid__main {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "ele1"
+            "ele2";
+
+    }
+
+    .galeria__panificados {
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: 340px;
+        grid-template-areas:
+            "ele1 ele2"
+            "ele3 ele4"
+            "ele5 ele6";
+    }
+
+    .galeria__pasteleria {
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: 340px;
+        grid-template-areas:
+            "ele1 ele2"
+            "ele3 ele4"
+            "ele5 ele6"
+            "ele7 ele8"
+            "ele9 ele9";
+    }
+
+    .grid__nosotros {
+        grid-template-columns: 1fr;
+        grid-auto-rows: 300px;
+        column-gap: 4rem;
+        grid-template-areas:
+            "ele1"
+            "ele2"
+            "ele3";
+
+    }
+
+    .nosotros__img {
+        padding-left: 1rem;
+    }
+
+    .grid__contacto {
+        grid-template-columns: repeat(2, 1fr);
+        /* grid-auto-rows: 50% 50%; */
+        grid-template-areas:
+            "ele1 ele1"
+            "ele3 ele3"
+            "ele2 ele2";
+    }
+
+    .contact__gps {
+        padding-left: 1rem;
+    }
+
+}
