--- a/Panaderia-Heiland/css/estilos.css
+++ b/Panaderia-Heiland/css/estilos.css
@@ -27,6 +27,18 @@
 
 }
 
+.nav__item {
+    padding: 4px 8px;
+    border-radius: 10px;
+
+}
+
+.nav__item:hover {
+    background-color: rgba(158, 109, 109, 0.767);
+    transition: 0.5s;
+
+}
+
 .nav__lista {
     width: 100%;
     display: flex;
@@ -332,8 +344,8 @@ iframe {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border: 3px solid red;
-    border-radius: 2rem;
+    border: 2px solid rgba(202, 38, 38, 0.411);
+    border-radius: 1rem;
 
 
 }
@@ -368,7 +380,28 @@ iframe {
 
 }
 
+.animaciones:hover .galeria__img {
+    width: 100%;
+    height: 100%;
+    animation-name: zoom;
+    animation-duration: 2s;
+    animation-iteration-count: alternate;
 
+}
+
+@keyframes zoom {
+    from {
+        transform: scale(1);
+
+    }
+    
+    to {
+        transform: scale(1.05);
+
+    }
+
+
+}
 
 /* pasteleria */
 
