--- a/Panaderia-Heiland/css/estilos.css
+++ b/Panaderia-Heiland/css/estilos.css
@@ -383,11 +383,19 @@ iframe {
 .animaciones:hover .galeria__img {
     width: 100%;
     height: 100%;
+    transform: scale(1.05);
+    transition: all 2s;
+}
+
+.titulo {
     animation-name: zoom;
     animation-duration: 2s;
     animation-iteration-count: alternate;
 
 }
+   
+
+
 
 @keyframes zoom {
     from {
@@ -489,238 +497,15 @@ iframe {
 
 }
 
-
-
-@media screen and (max-width: 425px) {
-
-    body {
-        background-image: none;
-        background-color: rgba(31, 105, 89, 0.795);
-    }
-
-    .header {
-        justify-content: flex-end;
-        box-shadow: 0 2px 5px rgba(245, 222, 179, 0.267);
-
-    }
-
-    .nav--toggle {
-        color: #2915dfd0;
-        background: none;
-        border: none;
-        font-size: 30px;
-        display: inline-block;
-    }
-
-    .nav {
-        display: none;
-
-    }
-
-    .subtitulo {
-        text-align: left;
-        font-size: 25px;
-        width: 100%;
-        max-width: 400px;
-        padding-bottom: 2rem;
-
-    }
-
-    .titulo {
-
-        letter-spacing: 4.5px;
-    }
-
-    .parrafo {
-        font-family: Arial, Helvetica, sans-serif;
-        /* border: 3px solid black ; */
-        width: 100%;
-        max-width: 400px;
-        height: 62%;
-        font-size: 18px;
-        font-weight: 800;
-        line-height: 1.3rem;
-        letter-spacing: 1.4px;
-        color: rgb(5, 5, 5);
-
-
-    }
-
-    .fondo-1 {
-        width: 100%;
-        max-width: 400px;
-        background-color: rgba(0, 0, 0, 0.438);
-
-    }
-
-
-    .grid__main {
-        grid-template-columns: (1fr);
-        row-gap: 2rem;
-        grid-template-areas:
-            "ele1"
-            "ele2";
-
-    }
-
-    .main__1 {
-        padding-left: 1rem;
-        padding-right: 1rem;
-        overflow: hidden;
-        width: 100%;
-        max-width: 400px;
-        height: 600px;
-
-    }
-
-    .main__2 {
-        padding-top: 5rem;
-        padding-left: 1rem;
-        overflow: hidden;
-        width: 100%;
-        max-width: 400px;
-        height: 400px;
-
-
-    }
-
-    .footer {
-        width: 100%;
-        max-width: 425px;
-
-
-    }
-
-    .galeria__panificados {
-        grid-template-columns: (1fr);
-        grid-auto-rows: 390px;
-        grid-template-areas:
-            "ele1"
-            "ele2"
-            "ele3"
-            "ele4"
-            "ele5"
-            "ele6";
-
-    }
-
-    .titulo {
-        font-size: 40px;
-
-    }
-
-    .galeria__pasteleria {
-        grid-template-columns: (1fr);
-        grid-auto-rows: 340px;
-        padding: 3rem;
-        row-gap: 3rem;
-        align-self: center;
-        grid-template-areas:
-            "ele1"
-            "ele2"
-            "ele3"
-            "ele4"
-            "ele5"
-            "ele6"
-            "ele7"
-            "ele8"
-            "ele9";
-    }
-
-    /* nosotros */
-    .grid__nosotros {
-        display: grid;
-        grid-template-columns: (1fr);
-        grid-template-areas:
-            "ele1"
-            "ele2"
-            "ele3";
-
-
-    }
-
-    .nosotros__1 {
-        justify-content: left;
-        padding-top: 2rem;
-
-
-    }
-
-    .nosotros__2 {
-        /* width: auto; */
-        /* height: 500px; */
-        padding-top: 1rem;
-
-
-    }
-
-    .nosotros__3 {
-        padding-top: 2rem;
-        padding-right: 1rem;
-
-
-    }
-
-    .nosotros__img {
-        width: 100%;
-        max-width: 400px;
-        height: 90%;
-        padding-left: 1rem;
-    }
-
-    .nosotros-parrafo {
-        padding-left: 2rem;
-        font-size: 20px;
-        font-family: 'Beau Rivage', cursive;
-        font-size: 30px;
-        letter-spacing: 2px;
-        line-height: 30px;
-    }
-
-    /* CONTACTO  */
-    .grid__contacto {
-        width: 100%;
-        max-width: 400px;
-        grid-template-columns: (1fr);
-        row-gap: 2rem;
-        grid-auto-rows: 500px;
-        grid-template-rows: 20% 40% 40%;
-        grid-template-areas:
-            "ele1"
-            "ele3"
-            "ele2";
-
-
-    }
-
-
-    iframe {
-        width: 85% !important;
-        height: 70% !important;
-
-    }
-
-
-}
-
-@media screen and (max-width: 600px) {
-    .galeria__titulo {
-        font-size: 18px;
-        max-width: 100%;
-        letter-spacing: 1px;
-
-    }
-
+@media screen and (max-width: 768px) {
     a {
-        font-size: 20px;
+        font-size: 22px;
         font-weight: 400;
         -webkit-text-stroke: 1px rgb(0, 0, 0);
         text-shadow: 3px 3px 3px rgba(255, 255, 255, 0.925);
 
     }
-}
-
-@media screen and (max-width: 768px) {
+    
     .galeria__titulo {
         font-size: 22px;
         max-width: 100%;
@@ -784,3 +569,237 @@ iframe {
     }
 
 }
+
+@media screen and (max-width: 600px) {
+    .nav {
+        display: none;
+
+    }
+
+    .nav--toggle {
+        color: #fbfaffd0;
+        background: none;
+        border: none;
+        font-size: 30px;
+        display: inline-block;
+    }
+
+    .galeria__titulo {
+
+        font-size: 18px;
+        max-width: 100%;
+        letter-spacing: 1px;
+
+    }
+
+    a {
+        font-size: 20px;
+        font-weight: 400;
+        -webkit-text-stroke: 1px rgb(0, 0, 0);
+        text-shadow: 3px 3px 3px rgba(255, 255, 255, 0.925);
+
+    }
+}
+
+@media screen and (max-width: 425px) {
+
+    body {
+        background-image: none;
+        background-color: rgba(31, 105, 89, 0.795);
+    }
+
+    .nav--toggle {
+        color: #2915dfd0;
+        background: none;
+        border: none;
+        font-size: 30px;
+        display: inline-block;
+    }
+
+    .nav {
+        display: none;
+
+    }
+
+    .subtitulo {
+        text-align: left;
+        font-size: 25px;
+        width: 100%;
+        max-width: 400px;
+        padding-bottom: 2rem;
+
+    }
+
+    .titulo {
+        font-size: 34px;
+        letter-spacing: 4.5px;
+    }
+
+    .parrafo {
+        font-family: Arial, Helvetica, sans-serif;
+        /* border: 3px solid black ; */
+        width: 100%;
+        max-width: 400px;
+        height: 62%;
+        font-size: 18px;
+        font-weight: 800;
+        line-height: 1.3rem;
+        letter-spacing: 1.4px;
+        color: rgb(5, 5, 5);
+
+
+    }
+
+    .fondo-1 {
+        background-color: rgba(0, 0, 0, 0.438);
+
+    }
+
+
+    .grid__main {
+        grid-template-columns: 1fr;
+        row-gap: 2rem;
+        grid-template-areas:
+            "ele1"
+            "ele2";
+
+    }
+
+    .main__1 {
+        padding-left: 1rem;
+        padding-right: 1rem;
+        overflow: hidden;
+        width: 100%;
+        max-width: 400px;
+        height: 600px;
+
+    }
+
+    .main__2 {
+        padding-top: 5rem;
+        padding-left: 1rem;
+        overflow: hidden;
+        width: 100%;
+        max-width: 400px;
+        height: 400px;
+
+
+    }
+
+    .footer {
+        width: 100%;
+        max-width: 424px;
+
+
+    }
+
+    .galeria__panificados {
+        grid-template-columns: 1fr;
+        grid-auto-rows: 390px;
+        grid-template-areas:
+            "ele1"
+            "ele2"
+            "ele3"
+            "ele4"
+            "ele5"
+            "ele6";
+
+    }
+
+
+    .galeria__pasteleria {
+        grid-template-columns: 1fr;
+        grid-auto-rows: 340px;
+        padding: 3rem;
+        row-gap: 3rem;
+        align-self: center;
+        grid-template-areas:
+            "ele1"
+            "ele2"
+            "ele3"
+            "ele4"
+            "ele5"
+            "ele6"
+            "ele7"
+            "ele8"
+            "ele9";
+    }
+
+    /* nosotros */
+    .grid__nosotros {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "ele1"
+            "ele2"
+            "ele3";
+
+
+    }
+
+    .nosotros__1 {
+        justify-content: left;
+        padding-top: 2rem;
+
+
+    }
+
+    .nosotros__2 {
+        /* width: auto; */
+        /* height: 500px; */
+        padding-top: 1rem;
+
+
+    }
+
+    .nosotros__3 {
+        padding-top: 2rem;
+        padding-right: 1rem;
+
+
+    }
+
+    .nosotros__img {
+        width: 100%;
+        max-width: 400px;
+        height: 90%;
+        padding-left: 1rem;
+    }
+
+    .nosotros-parrafo {
+        padding-left: 2rem;
+        font-size: 20px;
+        font-family: 'Beau Rivage', cursive;
+        font-size: 30px;
+        letter-spacing: 2px;
+        line-height: 30px;
+    }
+
+    /* CONTACTO  */
+    .grid__contacto {
+        width: 100%;
+        max-width: 400px;
+        grid-template-columns: 1fr;
+        row-gap: 2rem;
+        grid-auto-rows: 500px;
+        grid-template-rows: 20% 40% 40%;
+        grid-template-areas:
+            "ele1"
+            "ele3"
+            "ele2";
+
+
+    }
+
+
+    iframe {
+        width: 85% !important;
+        height: 70% !important;
+
+    }
+
+
+}
+
+
+
