--- a/style.scss
+++ b/style.scss
@@ -1,42 +1,10 @@
-@import '/Panaderia-Heiland/components/variables';
-
-@import '/Panaderia-Heiland/components/header';
-
-@import '/Panaderia-Heiland/components/main';
-
-@import '/Panaderia-Heiland/components/footer';
+@import './Panaderia-Heiland/components/variables';
+@import './Panaderia-Heiland/components/header';
+@import './Panaderia-Heiland/components/main';
+@import './Panaderia-Heiland/components/footer';
 
 
-.nosotros__1 {
-    justify-content: left;
-    padding-top: 2rem;
-    grid-area: ele1;
 
-    &__2 {
-        padding-top: 1rem;
-        grid-area: ele2;
-    }
-    &__3 {
-        padding-top: 2rem;
-        padding-right: 1rem;
-        grid-area: ele3;
-
-    }
-    &__img {
-        width: 100%;
-        height: 90%;
-        object-fit: cover;
-
-    }
-    &-parrafo {
-        padding-left: 2rem;
-        font-size: 20px;
-        font-family: 'Beau Rivage', cursive;
-        font-size: 35px;
-        letter-spacing: 2px;
-        line-height: 50px;
-    }
-}
 
 .grid__titulo {
     color: black;
