--- a/Panaderia-Heiland/components/_header.scss
+++ b/Panaderia-Heiland/components/_header.scss
@@ -1,35 +1,24 @@
-
-.header{
-    height: 60px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding-top: 1rem;
-    box-shadow: 0 2px 5px rgba(245, 222, 179, 0.267);
-}
-
-li {
-    list-style-position: inside;
-    list-style-type: none;
-}
-a {
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    font-size: 28px;
-    font-weight: 700;
-    font-style: inherit;
-    text-align: center;
-    /* -webkit-text-stroke: 1px rgb(0, 0, 0); */
-    /* text-shadow: 3px 3px 3px rgba(255, 255, 255, 0.925) */
-}
 .nav {
     width: 100%;
     justify-content: center;
+
+    li {
+        list-style-type: none;
+
+    }
+
+    a {
+        font-size: $fontnav;
+        text-decoration: none;
+        color: $colornav;
+        list-style-position: inside;
+    }
 
     &__item {
         padding: 4px 8px;
         border-radius: 10px;
     }
+
     &__lista {
         width: 100%;
         display: flex;
@@ -38,10 +27,12 @@ a {
         align-items: center;
         gap: 1rem;
     }
+
     &__item:hover {
         background-color: rgba(158, 109, 109, 0.767);
         transition: 0.5s;
     }
+
     &__lista {
         width: 100%;
         display: flex;
@@ -50,26 +41,8 @@ a {
         align-items: center;
         gap: 1rem;
     }
+
     &--toggle {
         display: none;
     }
-}
-.animaciones:hover .galeria__img {
-    width: 100%;
-    height: 100%;
-    transform: scale(1.05);
-    transition: all 2s;
-}
-@keyframes zoom {
-    from {
-        transform: scale(1);
-
-    }
-    
-    to {
-        transform: scale(1.05);
-
-    }
-
-
 }
