--- a/Panaderia-Heiland/components/_main.scss
+++ b/Panaderia-Heiland/components/_main.scss
@@ -1,51 +1,211 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 .sub-posicion {
     text-align: center;
 }
 
 body {
-    background-image: url(../images/fondofactura.jpg);
+    background-color: black;
     background-size: cover;
-    color: rgb(19, 18, 18);
     font-style: initial;
 }
 
-.titulo {
-    color: rgb(248, 248, 248);
-    -webkit-text-stroke: 2px black;
-    text-shadow: 3px 3px 3px black;
-    font-size: 45px;
-    font-style: normal;
-    font-weight: bold;
-    font-family: 'Dela Gothic One', cursive;
-    text-align: center;
-    letter-spacing: 2px;
+// main
+p {
+    color: white;
 
 }
+
+.titulo {
+    @include titulo (43px);
+    animation-name: zoom;
+    animation-duration: 2s;
+    animation-iteration-count: alternate;
+
+}
+
 .parrafo {
-    background-color: rgba(211, 186, 169, 0.123);
-    text-shadow: 1px 1px 1px white;
+    text-shadow: 1px 1px 2px rgb(245, 159, 159);
     font-family: 'Beau Rivage', cursive;
+    color: rgb(231, 201, 201);
     font-size: 42px;
     letter-spacing: 2px;
     line-height: 70px;
 
-
 }
+
 .subtitulo {
-    color: rgb(167, 24, 14);
-    font-size: 35px;
-    font-style: italic;
-    font-weight: 450;
-    font-family: 'Dela Gothic One', cursive;
-    text-align: left;
-    padding: 1rem;
-    -webkit-text-stroke: 1px black;
-    text-shadow: 2px 2px 2px rgb(248, 241, 241);
-    letter-spacing: 3px;
+    @include subtitulo(rgb(195, 151, 224));
 
 }
 
+// panificados
+
+.galeria__panificados {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 140px;
+    grid-template-areas:
+        "ele1 ele2 ele3"
+        "ele1 ele2 ele3"
+        "ele4 ele4 ele5"
+        "ele4 ele4 ele5"
+        "ele6 ele6 ele5"
+        "ele6 ele6 ele5";
+    padding: 1rem;
+    column-gap: 1rem;
+    row-gap: 2rem;
+
+    img {
+        @extend .imagen;
+
+    }
+
+    .grid__titulo {
+        @extend .tituloimg;
+    }
+
+    .galeria__titulo {
+        @extend .galeriatitulo;
+
+    }
+
+
+    .galeria__item-1 {
+        grid-area: ele1;
+
+    }
+
+    .galeria__item-2 {
+        grid-area: ele2;
+    }
+
+    .galeria__item-3 {
+        grid-area: ele3;
+    }
+
+    .galeria__item-4 {
+        grid-area: ele4;
+    }
+
+    .galeria__item-5 {
+        grid-area: ele5;
+    }
+
+    .galeria__item-6 {
+        grid-area: ele6;
+    }
+}
+
+/* pasteleria */
+
+.galeria {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 120px;
+    grid-template-areas:
+        "ele1 ele2 ele3"
+        "ele1 ele2 ele3"
+        "ele4 ele4 ele5"
+        "ele4 ele4 ele5"
+        "ele6 ele6 ele5"
+        "ele6 ele6 ele5"
+        "ele7 ele8 ele8"
+        "ele7 ele8 ele8"
+        "ele7 ele9 ele9"
+        "ele7 ele9 ele9";
+    padding: 15px;
+    column-gap: 1rem;
+    row-gap: 2rem;
+
+    img {
+        @extend .imagen;
+    }
+
+    .grid__titulo {
+        @extend .titulo;
+    }
+
+    .galeria__titulo {
+        @extend .galeriatitulo;
+
+    }
+
+    &__item--1 {
+        grid-area: ele1;
+    }
+
+    &__item--2 {
+        grid-area: ele2;
+    }
+
+    &__item--3 {
+        grid-area: ele3;
+    }
+
+    &__item--4 {
+        grid-area: ele4;
+    }
+
+    &__item--5 {
+        grid-area: ele5;
+    }
+
+    &__item--6 {
+        grid-area: ele6;
+    }
+
+    &__item--7 {
+        grid-area: ele7;
+    }
+
+    &__item--8 {
+        grid-area: ele8;
+    }
+
+    &__item--9 {
+        grid-area: ele9;
+    }
+
+    .grid__titulo-1 {
+        @extend .tituloimg;
+
+    }
+
+    .galeria__titulo-1 {
+        @extend .galeriatitulo;
+
+    }
+}
+.animaciones:hover img {
+    width: 100%;
+    height: 100%;
+    transform: scale(1.05);
+    transition: all 2s;
+}
+
+
+@keyframes zoom {
+    from {
+        transform: scale(1);
+
+    }
+
+    to {
+        transform: scale(1.05);
+
+    }
+
+
+}
+
+// nosotros
 .grid__nosotros {
+
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: 25% 25% 25% 25%;
@@ -56,30 +216,32 @@ body {
         "ele2 ele3"
         "ele2 ele3";
 
-}
+    .nosotros__1 {
+        justify-content: left;
+        padding-top: 2rem;
+        grid-area: ele1;
+    }
 
-.nosotros__1 {
-    justify-content: left;
-    padding-top: 2rem;
-    grid-area: ele1;
-
-    &__2 {
+    .nosotros__2 {
         padding-top: 1rem;
         grid-area: ele2;
     }
-    &__3 {
+
+    .nosotros__3 {
         padding-top: 2rem;
         padding-right: 1rem;
         grid-area: ele3;
 
-    }
-    &__img {
-        width: 100%;
-        height: 90%;
-        object-fit: cover;
+        img {
+            width: 100%;
+            height: 90%;
+            object-fit: cover;
+
+        }
 
     }
-    &-parrafo {
+
+    p {
         padding-left: 2rem;
         font-size: 20px;
         font-family: 'Beau Rivage', cursive;
@@ -87,4 +249,5 @@ body {
         letter-spacing: 2px;
         line-height: 50px;
     }
+
 }
