--- a/Panaderia-Heiland/components/_variables.scss
+++ b/Panaderia-Heiland/components/_variables.scss
@@ -1,3 +1,80 @@
-$bgfondo: rgba(29, 28, 28, 0.719);
+$bgfondo: rgba(252, 250, 250, 0.719);
+$colornav: rgb(175, 21, 21);
 
 
+$fontnav: 25px;
+
+
+// extend
+
+.imagen {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: 2px solid rgba(202, 38, 38, 0.411);
+    border-radius: 1rem;
+}
+
+
+.galeriatitulo {
+    font-size: 30px;
+    color: rgb(14, 13, 13);
+    text-shadow: 0.1em 0.2em 0.3em rgb(21, 255, 0);
+    position: absolute;
+    position: center;
+    letter-spacing: 4px;
+}
+
+.tituloimg {
+    color: black;
+    text-align: center;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+}
+
+// mixin
+
+@mixin subtitulo($colorsub) {
+    color: $colorsub;
+    font-size: 35px;
+    font-style: italic;
+    font-weight: 450;
+    font-family: 'Dela Gothic One', cursive;
+    text-align: left;
+    padding: 1rem;
+    -webkit-text-stroke: 1px black;
+    text-shadow: 2px 2px 2px rgb(248, 241, 241);
+    letter-spacing: 3px;
+}
+
+@mixin titulo($fontsize) {
+    color: rgb(248, 248, 248);
+    -webkit-text-stroke: 1px rgb(201, 28, 28);
+    text-shadow: 2px 2px 3px rgb(236, 36, 36);
+    font-size: $fontsize;
+    font-style: normal;
+    font-weight: bold;
+    font-family: 'Dela Gothic One', cursive;
+    text-align: center;
+    letter-spacing: 2px;
+}
+
+// maps
+
+$nav: (
+    navcolor: #ffffff,
+    navindex: #c397e0,
+);
+
+@each $name, $color in $nav {
+    .#{$name} {
+       text-shadow: 0.1em 0.2em 0.3em $color;
+    
+
+
+
+    }
+
+}
