--- a/Panaderia-Heiland/style.scss
+++ b/Panaderia-Heiland/style.scss
@@ -1,4 +1,4 @@
-@import './Panaderia-Heiland/components/variables';
-@import './Panaderia-Heiland/components/main';
-@import './Panaderia-Heiland/components/header';
-@import './Panaderia-Heiland/components/mediaq';
+@import './components/variables';
+@import './components/main';
+@import './components/header';
+@import './components/mediaq';
