--- a/components/_main.scss
+++ b/components/_main.scss
@@ -4,24 +4,35 @@
     box-sizing: border-box;
 }
 
+
 .sub-posicion {
     text-align: center;
 }
 
 body {
-    background-color: black;
+    background-color: rgba(190, 158, 158, 0.753);
     background-size: cover;
     font-style: initial;
 }
 
 // main
+
+iframe {
+    border: 2px solid black;
+    background-color: rgba(216, 160, 221, 0.514);
+    margin: 1rem;
+    padding: 5px;
+
+
+}
+
 p {
     color: white;
 
 }
 
 .titulo {
-    @include titulo (43px);
+    @include titulo (50px);
     animation-name: zoom;
     animation-duration: 2s;
     animation-iteration-count: alternate;
@@ -29,17 +40,17 @@ p {
 }
 
 .parrafo {
-    text-shadow: 1px 1px 2px rgb(245, 159, 159);
+    text-shadow: 1px 1px 2px rgb(170, 96, 96);
     font-family: 'Beau Rivage', cursive;
-    color: rgb(231, 201, 201);
-    font-size: 42px;
+    color: rgb(10, 10, 10);
+    font-size: 35px;
     letter-spacing: 2px;
-    line-height: 70px;
+    line-height: 50px;
 
 }
 
 .subtitulo {
-    @include subtitulo(rgb(195, 151, 224));
+    @include subtitulo(rgb(250, 248, 252));
 
 }
 
