--- a/components/_variables.scss
+++ b/components/_variables.scss
@@ -1,6 +1,6 @@
 $bgfondo: rgba(252, 250, 250, 0.719);
-$colornav: rgb(175, 21, 21);
-
+$colornav: rgb(107, 7, 7);
+$textshadow: rgb(0, 0, 0) 2px 0px 0px, rgb(0, 0, 0) 1.75517px 0.958851px 0px, rgb(0, 0, 0) 1.0806px 1.68294px 0px, rgb(0, 0, 0) 0.141474px 1.99499px 0px, rgb(0, 0, 0) -0.832294px 1.81859px 0px, rgb(0, 0, 0) -1.60229px 1.19694px 0px, rgb(0, 0, 0) -1.97998px 0.28224px 0px, rgb(0, 0, 0) -1.87291px -0.701566px 0px, rgb(0, 0, 0) -1.30729px -1.5136px 0px, rgb(0, 0, 0) -0.421592px -1.95506px 0px, rgb(0, 0, 0) 0.567324px -1.91785px 0px, rgb(0, 0, 0) 1.41734px -1.41108px 0px, rgb(0, 0, 0) 1.92034px -0.558831px 0px;
 
 $fontnav: 25px;
 
@@ -11,15 +11,16 @@ $fontnav: 25px;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border: 2px solid rgba(202, 38, 38, 0.411);
+    border: 2px solid rgba(15, 11, 11, 0.966);
     border-radius: 1rem;
 }
 
 
 .galeriatitulo {
     font-size: 30px;
-    color: rgb(14, 13, 13);
-    text-shadow: 0.1em 0.2em 0.3em rgb(21, 255, 0);
+    color: rgb(226, 160, 160);
+    // text-shadow: 0.1em 0.1em 0.1em rgb(17, 17, 4);
+    text-shadow: $textshadow;
     position: absolute;
     position: center;
     letter-spacing: 4px;
@@ -38,34 +39,32 @@ $fontnav: 25px;
 
 @mixin subtitulo($colorsub) {
     color: $colorsub;
-    font-size: 35px;
+    font-size: 25px;
     font-style: italic;
-    font-weight: 450;
     font-family: 'Dela Gothic One', cursive;
     text-align: left;
     padding: 1rem;
-    -webkit-text-stroke: 1px black;
-    text-shadow: 2px 2px 2px rgb(248, 241, 241);
-    letter-spacing: 3px;
+    text-shadow: $textshadow;
+    letter-spacing: 5px;
 }
 
 @mixin titulo($fontsize) {
-    color: rgb(248, 248, 248);
-    -webkit-text-stroke: 1px rgb(201, 28, 28);
-    text-shadow: 2px 2px 3px rgb(236, 36, 36);
+    color: rgba(90, 83, 83, 0.671);
+    // -webkit-text-stroke: 1px rgb(228, 21, 21);
+    text-shadow: 2px 2px 3px rgb(230, 11, 146);
     font-size: $fontsize;
-    font-style: normal;
     font-weight: bold;
-    font-family: 'Dela Gothic One', cursive;
+    font-style: italic;
+    font-family: 'Alegreya Sans SC', sans-serif;
     text-align: center;
-    letter-spacing: 2px;
+    letter-spacing: 3px;
 }
 
 // maps
 
 $nav: (
-    navcolor: #ffffff,
-    navindex: #c397e0,
+    navcolor: #8c49a0,
+    navindex: #a652df,
 );
 
 @each $name, $color in $nav {
