cambiando color al body

--- a/components/_main.scss
+++ b/components/_main.scss
@@ -10,7 +10,7 @@
 }
 
 body {
-    background-color: rgba(190, 158, 158, 0.753);
+    background-color: $bgfondo;
     background-size: cover;
     font-style: initial;
 }
