acomodando parrafo index

--- a/components/_mediaq.scss
+++ b/components/_mediaq.scss
@@ -152,7 +152,7 @@
     }
 
 
-    .galeria__pasteleria {
+    .galeria {
         grid-template-columns: 1fr;
         grid-auto-rows: 340px;
         padding: 3rem;
