--- a/components/_main.scss
+++ b/components/_main.scss
@@ -286,6 +286,10 @@ p {
 
     }
 
+    .nosotros-parrafo{
+        color: black;
+    }
+
     p {
         padding-left: 2rem;
         font-size: 20px;
