--- a/components/_mediaq.scss
+++ b/components/_mediaq.scss
@@ -1,3 +1,24 @@
+@media screen and (max-width: 1150px) {
+    .grid__nosotros {
+    
+
+        .nosotros__2 {
+
+            padding-top: 4rem;
+
+
+        }
+
+        .nosotros__3 {
+            padding-top: 2rem;
+            padding-right: 1rem;
+
+
+        }
+
+    }
+}
+
 @media screen and (max-width: 768px) {
 
 
@@ -37,128 +58,6 @@
             "ele2"
             "ele3";
 
-    }
-
-    .nosotros__img {
-        padding-left: 1rem;
-    }
-
-
-}
-
-@media screen and (max-width: 600px) {
-    
-
-    .galeria__titulo {
-
-        font-size: 18px;
-        max-width: 100%;
-        letter-spacing: 1px;
-
-    }
-
-    a {
-        font-size: 20px;
-        font-weight: 400;
-
-
-    }
-}
-
-@media screen and (max-width: 425px) {
-
-
-    .subtitulo {
-        text-align: left;
-        font-size: 20px;
-        width: 100%;
-        max-width: 400px;
-        padding-bottom: 1rem;
-
-    }
-
-
-    .titulo {
-        font-size: 34px;
-        letter-spacing: 4.5px;
-    }
-
-    .parrafo {
-        font-family: Arial, Helvetica, sans-serif;
-        width: 100%;
-        font-size: 18px;
-        font-weight: 800;
-        line-height: 1.4rem;
-        color: rgb(26, 25, 25);
-        
-
-    }
-    .parrafo-ul{
-        text-shadow: 1px 1px 2px rgb(170, 96, 96);
-        font-family: Arial, Helvetica, sans-serif;
-        width: 100%;
-        height: 80%;
-        font-size: 18px;
-        font-weight: 800;
-        line-height: 1.4rem;
-        color: rgb(26, 25, 25);
-    
-    
-    }
-
-    iframe {
-        border: 2px solid black;
-        background-color: rgba(216, 160, 221, 0.514);
-        margin: 0;
-        height: 300px;
-        
-    }
-
-
-    .galeria__panificados {
-        grid-template-columns: 1fr;
-        grid-auto-rows: 390px;
-        grid-template-areas:
-            "ele1"
-            "ele2"
-            "ele3"
-            "ele4"
-            "ele5"
-            "ele6";
-
-    }
-
-
-    .galeria {
-        grid-template-columns: 1fr;
-        grid-auto-rows: 340px;
-        padding: 3rem;
-        row-gap: 3rem;
-        align-self: center;
-        grid-template-areas:
-            "ele1"
-            "ele2"
-            "ele3"
-            "ele4"
-            "ele5"
-            "ele6"
-            "ele7"
-            "ele8"
-            "ele9";
-    }
-
-    /* nosotros */
-    .grid__nosotros {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-areas:
-            "ele1"
-            "ele2"
-            "ele3";
-
-
-
-
         .nosotros__1 {
             justify-content: left;
             padding-top: 2rem;
@@ -168,33 +67,175 @@
 
         .nosotros__2 {
 
-            padding-top: 1rem;
+            padding-top: 5rem;
 
 
         }
 
-        .nosotros__3 {
-            padding-top: 2rem;
-            padding-right: 1rem;
-
-
-        }
-
-        .nosotros__img {
-            width: 100%;
-            max-width: 400px;
-            height: 90%;
-            padding-left: 1rem;
-        }
-
-        .nosotros-parrafo {
-            padding-left: 2rem;
-            font-size: 20px;
-            font-family: 'Beau Rivage', cursive;
-            font-size: 30px;
-            letter-spacing: 2px;
-            line-height: 30px;
-        }
     }
 
+    .nosotros__img {
+        padding-left: 1rem;
+    }
+
+
 }
+
+
+    @media screen and (max-width: 600px) {
+
+
+        .galeria__titulo {
+
+            font-size: 18px;
+            max-width: 100%;
+            letter-spacing: 1px;
+
+        }
+
+        a {
+            font-size: 20px;
+            font-weight: 400;
+
+
+        }
+
+        
+        
+    }
+
+    @media screen and (max-width: 425px) {
+
+
+        .subtitulo {
+            text-align: left;
+            font-size: 20px;
+            width: 100%;
+            max-width: 400px;
+            padding-bottom: 1rem;
+
+        }
+
+
+        .titulo {
+            font-size: 34px;
+            letter-spacing: 4.5px;
+        }
+
+        .parrafo {
+            font-family: Arial, Helvetica, sans-serif;
+            width: 100%;
+            font-size: 18px;
+            font-weight: 800;
+            line-height: 1.4rem;
+            color: rgb(26, 25, 25);
+
+
+        }
+
+        .parrafo-ul {
+            text-shadow: 1px 1px 2px rgb(170, 96, 96);
+            font-family: Arial, Helvetica, sans-serif;
+            width: 100%;
+            height: 80%;
+            font-size: 18px;
+            font-weight: 800;
+            line-height: 1.4rem;
+            color: rgb(26, 25, 25);
+
+
+        }
+
+        iframe {
+            border: 2px solid black;
+            background-color: rgba(216, 160, 221, 0.514);
+            margin: 0;
+            height: 300px;
+
+        }
+
+
+        .galeria__panificados {
+            grid-template-columns: 1fr;
+            grid-auto-rows: 390px;
+            grid-template-areas:
+                "ele1"
+                "ele2"
+                "ele3"
+                "ele4"
+                "ele5"
+                "ele6";
+
+        }
+
+
+        .galeria {
+            grid-template-columns: 1fr;
+            grid-auto-rows: 340px;
+            padding: 3rem;
+            row-gap: 3rem;
+            align-self: center;
+            grid-template-areas:
+                "ele1"
+                "ele2"
+                "ele3"
+                "ele4"
+                "ele5"
+                "ele6"
+                "ele7"
+                "ele8"
+                "ele9";
+        }
+
+        /* nosotros */
+        .grid__nosotros {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-areas:
+                "ele1"
+                "ele2"
+                "ele3";
+
+
+
+
+            .nosotros__1 {
+                justify-content: left;
+                padding-top: 2rem;
+
+
+            }
+
+            .nosotros__2 {
+
+                padding-top: 1rem;
+
+
+            }
+
+            .nosotros__3 {
+                padding-top: 2rem;
+                padding-right: 1rem;
+
+
+            }
+
+            .nosotros__img {
+                width: 100%;
+                max-width: 400px;
+                height: 90%;
+                padding-left: 1rem;
+            }
+
+            .nosotros-parrafo {
+                color: black;
+                padding-left: 2rem;
+                font-size: 20px;
+                font-family: 'Beau Rivage', cursive;
+                font-size: 30px;
+                letter-spacing: 2px;
+                line-height: 30px;
+            }
+        }
+
+    }
