Entrega final del proyecto

--- a/components/_mediaq.scss
+++ b/components/_mediaq.scss
@@ -132,7 +132,7 @@
         .nosotros-parrafo {
             color: black;
             padding-left: 2rem;
-            font-size: 25px;
+            font-size: 22px;
             letter-spacing: 2px;
             line-height: 25px;
         }
@@ -260,9 +260,8 @@
 
             .nosotros-parrafo {
                 color: black;
-                padding-left: 2rem;
-                font-family: 'Beau Rivage', cursive;
-                font-size: 22px;
+                font-size: 18px;
+                font-weight: 500;
                 letter-spacing: 2px;
                 line-height: 25px;
             }
